<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DetailsTheme">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/details_image_icon"
        android:contentDescription="@string/large_contacts_icon_in_detail_view"
        android:src="@mipmap/ic_launcher_round"/>

    <TextView
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="59dp"
        android:layout_toEndOf="@+id/details_image_icon"
        android:textColor="@color/colorLightestPurple"/>

        <TextView
            android:id="@+id/phone_number_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_holder_pNum"
            android:textSize="22sp"
            android:clickable="true"
            android:textColorLink="@color/colorAccent"
            android:gravity="center"
            android:layout_below="@+id/fullName"
            android:layout_toEndOf="@+id/details_image_icon"
            android:autoLink="phone"
            />

    <Button
        style="@style/back_button_style"
        android:id="@+id/back_button_details"
        android:text="@string/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        />

</RelativeLayout>